test/files/neg/finitary-error.scala
trait A[T]
trait B[T]
trait C[T] extends A[C[B[T]]]
