test/files/neg/finitary-error.check
finitary-error.scala:3: error: class graph is not finitary because type parameter T is expansively recursive
trait C[T] extends A[C[B[T]]]
        ^
one error found
